<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/select_ingredients_list"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_ingredients_and_steps_ingredients_button_margin_top"
            android:layout_marginEnd="@dimen/fragment_ingredients_and_steps_ingredients_button_margin_end"
            android:layout_marginStart="@dimen/fragment_ingredients_and_steps_ingredients_button_margin_start"
            android:layout_marginTop="@dimen/fragment_ingredients_and_steps_ingredients_button_margin_top"
            android:paddingEnd="@dimen/fragment_ingredients_and_steps_ingredients_button_padding_end"
            android:paddingStart="@dimen/fragment_ingredients_and_steps_ingredients_button_padding_start"
            android:text="@string/fragment_ingredients_and_steps_ingredients_button_text"
            android:textSize="@dimen/fragment_ingredients_and_steps_ingredients_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/select_steps_list"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/select_steps_list"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_ingredients_and_steps_steps_button_margin_bottom"
            android:layout_marginEnd="@dimen/fragment_ingredients_and_steps_steps_button_margin_end"
            android:layout_marginStart="@dimen/fragment_ingredients_and_steps_steps_button_margin_start"
            android:layout_marginTop="@dimen/fragment_ingredients_and_steps_steps_button_margin_top"
            android:paddingEnd="@dimen/fragment_ingredients_and_steps_steps_button_padding_end"
            android:paddingStart="@dimen/fragment_ingredients_and_steps_steps_button_padding_start"
            android:text="@string/fragment_ingredients_and_steps_steps_button_text"
            android:textSize="@dimen/fragment_ingredients_and_steps_steps_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/select_ingredients_list"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredients_and_steps_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fragment_ingredients_and_steps_recycler_view_margin"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/ingredients_steps_load_progress_bar"
            android:layout_width="@dimen/fragment_ingredients_and_steps_progress_bar_width"
            android:layout_height="@dimen/fragment_ingredients_and_steps_progress_bar_height" />

    </LinearLayout>

</LinearLayout>