...
        android:gravity="center"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fragment_step_step_short_description_text_size"
        android:textStyle="bold" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/step_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fragment_step_step_video_margin"
        android:layout_weight="4" />

    <ImageView
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fragment_step_step_description_scroll_view_margin"
        android:layout_weight="3">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/fragment_step_step_description_text_size" />

...
