<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.robertkiszelirk.bakingapp.ui.activity.BakingAppMain">

    <ProgressBar
        android:id="@+id/recipe_load_progress"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/no_internet_connection_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_internet_connection"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/baking_app_main_no_internet_connection_text_size"
        android:visibility="gone" />

</FrameLayout>
